src/client/app/styles/main.css
/* ... */
.AvatarContainer img {
  padding: 5px;
  border: 1px solid #696969;
  background-color: #FFFFFF;
  border-radius: 5px;
  height: 100%;
  width: 100%;
  min-height: 190px;
  min-width: 190px;
  max-width: 250px;
  max-height: 250px;
}

.seller-Name {
  height: 0px;
  top: -75px;
  color: #FFFFFF;
  text-shadow: 0 0 5px #696969;
}

.seller-tabs {
  padding-bottom: 0px;
  z-index: -1;
  background-color: #F1F1F1;
}

/*seller-ui stuff*/

/* Customize container */

.container-seller {
  max-width: 970px !important;
}

.seller-item-stock {
  vertical-align: center;
  padding-top: 5px;
  padding-bottom: 5px;
  margin-top: 5px;
  margin-left: 5px;
}

.seller-item {
  text-align: right !important;
}

.seller-item-stock input[type="radio"] {
  margin-left: 25px;
  text-align: right !important;
}

@media (max-width: 768px) {
  .seller-Name {
    text-align: center !important;
  }

  .seller-title-bar {
    padding-left: 10px !important;
    padding-right: 10px !important;
  }

  .thumbnail {
    float: none !important;
    display: inline-block;
  }

  .container-md {
    text-align: center !important;
  }

  .seller-item-stock {
    text-align: left;
  }

  .item-content-container {
    padding-left: 0px !important;
  }
}

.edit-button-container {
  text-align: right;
  vertical-align: center;
}

.add-new-button-container {
  top: 15px;
  text-align: right;
  padding-right: 15px;
}

.seller-title-bar {
  padding-left: 0px;
  padding-right: 0px;
}

.all-locations {
  background-color: #F1F1F1;
}

.nav-pills > li.active > a,
.nav-pills > li.active > a:hover,
.nav-pills > li.active > a:focus {
  background-color: #FFFFFF;
  color: #89cc1d;
}

.seller-title-bar {
  display: inline !important;
}

.nav > li > a {
  color: #A5A5A5;
}

.nav-pills li {
  text-decoration: none;
  font-weight: bold;
  border-radius: 0px;
  border-left: 2px solid #EBEBEB !important;
  color: #000 !important;
}

.nav-pills > li > a {
  border-radius: 0px;
}

.edit-text {
  color: #8ed41e;
  padding: 5px;
}

.well {
  padding-bottom: 5px;
}

.edit-text-container {
  text-align: right;
}

.edit-text:hover {
  color: #89cc1d;
  cursor: pointer;
  font-weight: bold;
}

.list-group-item {
  padding-bottom: 0px !important;
}

.item-content-container {
  padding-left: 15px;
}

.seller-item-list {
  padding: 5px;
  vertical-align: center;
}

.crop-image-wrapper {
  text-align:center;
  padding-top: 15px;
}

.jcrop-centered
{
    display: inline-block;
}

.progress-bar.animate {
   width: 100%;
}

/* SELLER UI ENDS*/

/* PRODUCT DETAILS UI STARTS */

.product-details-header {
  margin-bottom: 2px;
}

.vendor-card-photo {
  width: 100%;
  margin-bottom: 0px;
  max-width: 350px;
}

.product-details-text a {
  color: #696969 !important;
  font-size: 16px;
}

.product-details-text {
  padding-bottom: 12px;
}

/* PRODUCT DETAILS UI ENDS */

/*VENDOR DETAILS UI*/

.panel-heading {
  color: #F8F8F8;
}

.container-vendor-details {
  padding: 0px 30px 0px 30px !important;
}

.breadcrumbs {
  color: #89cc1d;
  font-size: 15px !important;
  font-family: "Guardian-EgypTT";
}

.panel-heading:hover {
  cursor: pointer;
  background-color: #F3f3f3;
}

.faded-box-edge {
  border: 6px solid #E4F3DA !important;
  padding: 15px;
  border-radius: 7px;
}

.HeaderText {
  font-size: 15px;
  padding: 0px;
  color: #777777;
}

.seller-name-text {
  color: #000000;
  font-size: 30px;
}

.vendorAvatar img {
  padding: 5px;
  border: 1px solid #dddddd !important;
  border-radius: 5px;
  max-height: 200px;
  max-width: 200px;
  width: 100%;
  height: 100%;
  border-radius: 50%;
  background-color: #FFFFFF;
}

.icon-map-styles {
  font-size: 40px;
  color: #dddddd !important;
  text-align: center;
}

.seller-Details-Jumbotron {
  background: #E4F3DA;
  text-align: left;
  padding-bottom: 20px !important;
  border-bottom: 3px solid #89cc1d !important;
}

.text-align-right {
  text-align: right;
}

.container-display-vendor-name {
  color: #696969 !important;
  font-family: 'Roboto', sans-serif;
  font-size: 12px;
  padding-top: 0px;
}

.container-display-vendor-name a {
  color: #696969 !important;
  font-size: 12px;
}

.vendor-details-items img {
  width: 100%;
}

.toggle-more-info {
  color: #89cc1d;
}

.beLocal-searchProducts {
  width: 100%;
}

.dropdown-productFilter {
  color: #696969;
}

.dropdown-productFilter {
  padding-top: 5px;
}

.dropdown-productFilter a:hover,
a:focus {
  color: #696969;
  text-decoration: none;
}

.dropdown-productFilter .open > a {
  background-color: transparent !important;
}

@media (max-width: 768px) {
  .seller-Details-Jumbotron {
    text-align: center !important;
    padding: 40px 0px 5px 0px!important;
  }

  .responsive-center {
    text-align: center;
  }

  .vendorAvatar img {
    max-height: 150px;
    max-width: 150px;
  }
}

/*CUSTOMER VENDOR TAB STYLES*/

.vendor-tab-styles {
  border-radius: 5px !important;
}

.vendor-images {
  width: 100%;
  height: 100px;
}

.vendor-card {
  height: 120px;
  margin-top: 15px;
}

.vendor-image-container {
  width: 100%;
  height: 100%;
  padding: 3px;
}

.no-padding {
  padding: 0px !important;
}

/*NEW UI STYLES (OCT 21st)*/

.new-formatting-container {
  padding: 80px 15px 5px 15px !important;
}

.new-heading-style {
  margin-top: 15px;
  font-family: 'Libre Baskerville', serif;
  font-size: 25px;
  line-height: normal;
  font-weight: bold;
  color: #403e3b;
}

.new-hr-heading-style {
  font-size: 16px;
  display: inline-block;
  font-family: 'Roboto', sans-serif;
  color: #9c9795;
  vertical-align: middle !important;
  padding-top: 7px;
  padding-bottom: 7px;
}

.new-hr-heading-style a {
  color: #9C9795;
}

.new-hr-heading-style a:hover {
  color: #7d7978;
}

.new-vendor-name-style {
  margin-top: 15px;
  font-family: 'Libre Baskerville', serif;
  font-size: 40px;
  line-height: normal;
  font-weight: bolder;
  color: #403e3b;
}
/* ... */

